plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.forgather'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.rest-assured:spring-mock-mvc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// TestContainers
	testImplementation 'org.testcontainers:testcontainers:2.0.2'
	testImplementation 'org.testcontainers:testcontainers-mysql:2.0.2'

	// logback
	implementation("net.logstash.logback:logstash-logback-encoder:8.0")

	// Flyway
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// AWS
	implementation platform("software.amazon.awssdk:bom:2.27.21")
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:s3-transfer-manager'

	// image download
	implementation 'net.lingala.zip4j:zip4j:2.11.5'

	// metadata-extractor
	implementation 'com.drewnoakes:metadata-extractor:2.19.0'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// hibernate validation
	implementation("org.springframework.boot:spring-boot-starter-validation:3.4.7")

	// Spring Security Crypto (BCrypt)
	implementation 'org.springframework.security:spring-security-crypto'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Metrics
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.opentelemetry:opentelemetry-exporter-otlp'

    // thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // WireMock
    testImplementation 'org.wiremock:wiremock-standalone:3.10.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
